--- a/king_of_Compression/king_of_Compression.vcxproj
+++ b/king_of_Compression/king_of_Compression.vcxproj
@@ -11,6 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BS.cpp" />
+    <ClCompile Include="BS.h" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
