--- a/king_of_Compression/king_of_Compression.vcxproj.filters
+++ b/king_of_Compression/king_of_Compression.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="BS.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="BS.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
